--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+        "tailwindcss-spinner": "^1.2.0",
         "vue-template-compiler": "^2.6.12"
     }
 }
